--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@solana/web3.js": "^1.87.6",
     "@supabase/supabase-js": "^2.39.3",
     "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
